<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">
	<micheal65536.tgshoutbox.MessageListView android:id="@+id/listview_messages"
											 android:layout_width="match_parent"
											 android:layout_height="0dp"
											 android:layout_weight="1"
											 android:divider="@color/message_dividers"
											 android:dividerHeight="0.5dp"
											 android:drawSelectorOnTop="true"
											 android:stackFromBottom="true"
											 android:transcriptMode="normal"/>
	<LinearLayout android:id="@+id/linearlayout_message_compose"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:background="@color/message_compose"
				  android:elevation="16dp"
				  android:orientation="vertical">
		<LinearLayout android:id="@+id/linearlayout_message_compose_private"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:layout_margin="@dimen/margin"
					  android:visibility="gone">
			<TextView android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:text="@string/private_shout_to"
					  android:textColor="@color/text_inverse"
					  android:textSize="14sp"/>
			<TextView android:id="@+id/textview_message_compose_recipient"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:textColor="@color/text_inverse"
					  android:textSize="14sp"/>
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:orientation="horizontal">
			<ImageButton android:id="@+id/button_chooserecipient"
						 android:layout_width="@dimen/imagebutton_size"
						 android:layout_height="@dimen/imagebutton_size"
						 android:background="@drawable/imagebutton_background"
						 android:contentDescription="@string/choose_recipient"
						 android:src="@drawable/ic_person"/>
			<Button android:id="@+id/button_action"
					android:layout_width="@dimen/imagebutton_size"
					android:layout_height="@dimen/imagebutton_size"
					android:background="@drawable/imagebutton_background"
					android:contentDescription="@string/action"
					android:fontFamily="sans-serif-condensed"
					android:text="@string/action"
					android:textSize="12dp"/>
			<EditText android:id="@+id/edittext_message"
					  android:layout_width="0dp"
					  android:layout_height="wrap_content"
					  android:layout_gravity="center"
					  android:layout_weight="1"
					  android:imeOptions="actionSend|flagNoExtractUi"
					  android:inputType="textShortMessage"
					  android:textSize="16sp"
					  android:theme="@style/AppTheme.EditText.MessageCompose"/>
			<ImageButton android:id="@+id/button_send"
						 android:layout_width="@dimen/imagebutton_size"
						 android:layout_height="@dimen/imagebutton_size"
						 android:background="@drawable/imagebutton_background"
						 android:contentDescription="@string/send"
						 android:src="@drawable/ic_send"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>